[package]
name = "Rust-Basics"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = "0.4"

reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.18"
url = "2.4"

